--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
 .App {
+  text-align: center;
+}
+
+@font-face {
+  font-family: 'Rock Salt', cursive;
+  src: url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+}
+
+
+body {
+  background-color: #6788c9;
+  color: rgb(255, 255, 255);
+  padding: 40px;
+  font-family: 'Rock Salt', cursive;
+  src: url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
   text-align: center;
 }
 
@@ -14,14 +31,14 @@
 }
 
 .App-header {
-  background-color: #67738c;
+  background-color: #636f88;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
