add font to body

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Rock Salt', cursive;
+  font-size: 30
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Rock Salt', cursive;
+}
+
+div.App {
+  background-color: lightsteelblue;
+  font-family: 'Rock Salt', cursive;
+}
+
+div {
+  background-color: lightsteelblue;
+  font-family: 'Rock Salt', cursive;
+}
+
+div.jumbotron {
+  background-color: lightsteelblue;
+}
+
+div.dropdown nav-item {
+  font-family: 'Rock Salt', cursive;
 }
